Updated an image for Simple translator project

--- a/projects.json
+++ b/projects.json
@@ -4,7 +4,7 @@
       "title": "Simple translator",
       "description": "A simple Vue.js word translator",
       "url": "https://negodiaev.github.io/simple-translator/",
-      "imageUrl": "images/pahu.jpg"
+      "imageUrl": "images/simpletranslator.jpg"
     },
     "pahu": {
       "title": "Pahu design",
