--- a/projects.json
+++ b/projects.json
@@ -3,86 +3,86 @@
     "simpletranslator": {
       "title": "Simple translator",
       "description": "A simple Vue.js word translator",
-      "url": "https://negodiaev.github.io/simple-translator/",
-      "imageUrl": "images/simpletranslator.jpg"
+      "url": "simple-translator/",
+      "imageUrl": "projects/images/simpletranslator.jpg"
     },
     "pahu": {
       "title": "Pahu design",
       "description": "An example of a design interior store project (Home page).",
-      "url": "pahu/index.html",
-      "imageUrl": "images/pahu.jpg"
+      "url": "projects/pahu/index.html",
+      "imageUrl": "projects/images/pahu.jpg"
     },
     "sportshold": {
       "title": "Sportshold",
       "description": "An example of sports footwear online store (Home page).",
-      "url": "sportshold/index.html",
-      "imageUrl": "images/sportshold.jpg"
+      "url": "projects/sportshold/index.html",
+      "imageUrl": "projects/images/sportshold.jpg"
     },
     "hoteldeluxe": {
       "title": "Hotel Deluxe",
       "description": "An example of a hotel website home page (made with Flexbox).",
-      "url": "hoteldeluxe/index.html",
-      "imageUrl": "images/hoteldeluxe.jpg"
+      "url": "projects/hoteldeluxe/index.html",
+      "imageUrl": "projects/images/hoteldeluxe.jpg"
     },
     "axit": {
       "title": "Axit",
       "description": "An example of standard hosting provider website (Landing page).",
-      "url": "axit/index.html",
-      "imageUrl": "images/axit.jpg"
+      "url": "projects/axit/index.html",
+      "imageUrl": "projects/images/axit.jpg"
     },
     "webdetector": {
       "title": "Web Detector",
       "description": "Global search service of goods (few pages).",
-      "url": "webdetector/index.html",
-      "imageUrl": "images/webdetector.jpg"
+      "url": "projects/webdetector/index.html",
+      "imageUrl": "projects/images/webdetector.jpg"
     },
     "photosite": {
       "title": "Photo site",
       "description": "A multi page website for a photostudio.",
-      "url": "fotosite/index.html",
-      "imageUrl": "images/fotosite.jpg"
+      "url": "projects/fotosite/index.html",
+      "imageUrl": "projects/images/fotosite.jpg"
     },
     "smartkart": {
       "title": "Smart Kart",
       "description": "A website for a karting center (Landing page).",
-      "url": "smartkart/index.html",
-      "imageUrl": "images/smartkart.jpg"
+      "url": "projects/smartkart/index.html",
+      "imageUrl": "projects/images/smartkart.jpg"
     },
     "foresttechnologies": {
       "title": "Forest technologies",
       "description": "A multi page website for a company that produces lumber and wood products.",
-      "url": "lesteh/index.html",
-      "imageUrl": "images/lesteh.jpg"
+      "url": "projects/lesteh/index.html",
+      "imageUrl": "projects/images/lesteh.jpg"
     },
     "victory": {
       "title": "Victory",
       "description": "A website for a legal center that offers law services for individuals and legal entities (Landing page).",
-      "url": "victory/index.html",
-      "imageUrl": "images/victory.jpg"
+      "url": "projects/victory/index.html",
+      "imageUrl": "projects/images/victory.jpg"
     },
     "smokings": {
       "title": "Smokings",
       "description": "A website of men's wedding suits rent (Landing page with fixed width).",
-      "url": "smoking/index.html",
-      "imageUrl": "images/smoking.jpg"
+      "url": "projects/smoking/index.html",
+      "imageUrl": "projects/images/smoking.jpg"
     },
     "carrental": {
       "title": "Car rental",
       "description": "An example of a car rent website (Home page). Includes animation effects.",
-      "url": "carrental/index.html",
-      "imageUrl": "images/carrental.jpg"
+      "url": "projects/carrental/index.html",
+      "imageUrl": "projects/images/carrental.jpg"
     },
     "fooseshoe": {
       "title": "Foose shoe",
       "description": "An example of men's footwear online store (Home page). Includes popups containing product info.",
-      "url": "fooseshoe/index.html",
-      "imageUrl": "images/fooseshoe.jpg"
+      "url": "projects/fooseshoe/index.html",
+      "imageUrl": "projects/images/fooseshoe.jpg"
     },
     "blueasy": {
       "title": "Blueasy",
       "description": "Portfolio website example (Landing page). Includes animation effects and a callback form.",
-      "url": "blueasy/index.html",
-      "imageUrl": "images/blueasy.jpg"
+      "url": "projects/blueasy/index.html",
+      "imageUrl": "projects/images/blueasy.jpg"
     }
   }
 }
